# ligand_patcher

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  quick_test.sh  requirements.txt  setup.py  test_installation.py
examples/: usage_example.py
ligand_patcher/: __init__.py  cli.py  patcher.py  utils.py
test_patched_system/: matrix.txt  ppm.inp  step1_pdbreader.inp  step2_area.plo  step2_orient.inp  step3_nlipids_lower.prm  step3_nlipids_upper.prm  step3_packing.inp  step3_size.inp  step4.2_waterbox.inp  step4.3_ion.inp  step4_lipid.inp  step4_lipid_checkchol.inp  step4_lipid_repack.inp  step5_assembly.inp  step5_input.inp  step6.1_equilibration.inp  step6.2_equilibration.inp  step6.3_equilibration.inp  step6.4_equilibration.inp  step6.5_equilibration.inp  step6.6_equilibration.inp  step7_production.inp
tests/: __init__.py  test_patcher.py
